fix spinning background clipping problem

--- a/app/styles/main.scss
+++ b/app/styles/main.scss
@@ -113,11 +113,12 @@ header, section, footer {
 
 .bg-image {
 	position: fixed;
-	top: 0;
+	top: -25%;
+    left: 0; 
 	background: url('../images/firstpanel.png') center center;
 	background-size: cover;
-	width: 100%;
-	height: 100%;
+	width: 1920px;
+	height: 1920px;
 	opacity: 0.8;
 	z-index: -1;
 	animation: rotate 90s linear infinite;
